static/css/base.css
/* ... */
ul.nav-menu li {
    display: inline-block;
    height: 40px;
    line-height: 40px;
    /* Set line-height to vertically align the content */
    vertical-align: middle;
}

.dropdown-menu {
    background-color: #f8f9fa;
}

.dropdown-item {
    color: #0b201e;
    font-size: 18px;
}

.dropdown-item:hover {
    background-color: #194f4930;
}

.dropdown-item:active {
    background-color: #0e7373;
    color: #fff;
}

.section-title {
    color: var(--forest);
}

/* Auth section */
.auth-btn {
    border-radius: 20px;
    background: linear-gradient(to bottom, #e5ede8, #b5c9bd);
    color: var(--forest);
    border: none;
    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
    transition: transform 0.3s ease;
    transform-origin: center;
    font-size: 20px;
    display: inline-flex;
    align-items: center;
    height: 100%;
}

.auth-btn:hover {
    transform: scale(1.05);
    color: #fff;
}

.auth-btn:active {
    transform: scale(0.95);
    outline: none !important;
    box-shadow: none;
}

.auth-btn:focus {
    /* remove blue outline when bottstrap button is clicked or hovered */
    outline: none !important;
    box-shadow: none;
}

.p-txt {
    font-family: var(--main-font);
    font-size: 22px;
    color: var(--forest);
}

.p-txt-small {
    font-family: var(--main-font);
    font-size: 18px;
    color: var(--forest);
}

.special-anchor {
    color: var(--gold);
    font-size: 22px;
}

.special-anchor:hover {
    color: var(--gold);
    font-weight: bold;
}

input {
    border-radius: 10px;
}

.form-check-label {
    margin-left: 10px;
}

/* Hero section */
.hero-banner {
    background-color: #194f4990;
    height: 600px;
    position: relative;
    padding: 0px;
}

.hero-text-panel {
    background: linear-gradient(to bottom, #0e7373, #194f49);
    height: 460px;
    width: 415px;
    border-radius: 60px;
    position: absolute;
    left: 225px;
    top: 236px;
}

.hero-text {
    font-size: 34px;
    padding: 30px;
    font-family: var(--main-font);
}

.hero-image {
    height: 600px;
    overflow: hidden;
    position: relative;
    width: 100vw;
    object-fit: cover;
}

.hero-button {
    z-index: 1;
    position: absolute;
    left: 76px;
    top: 313px;
    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
    width: 263px;
    height: 100px;
    transition: transform 0.3s ease;
}

.hero-btn-txt {
    z-index: 2;
    font-size: 28px;
    position: absolute;
    top: 342px;
    left: 97px;
    color: var(--forest);
    font-weight: 500;
    transition: transform 0.3s ease;
}

.txt-hover {
    transition: transform 0.3s ease;
}

.txt-hover:hover .hero-btn-txt {
    background: linear-gradient(to bottom, #da6928, #c43806);
    -webkit-background-clip: text;
    color: transparent;
    transform: scale(1.05);
}

.hero-btn-icon {
    z-index: 2;
    position: absolute;
    top: 343px;
    left: 271px;
    height: 40px;
    transition: transform 0.3s ease;
    transform-origin: center;
}

.txt-hover:hover .hero-button {
    transform: scale(1.05);
}

.txt-hover:hover .hero-btn-icon {
    transform: scale(1.15);
}

.txt-hover:active .hero-btn-icon,
.txt-hover:active .hero-button {
    transform: scale(0.95);
}

.heading-text {
    color: var(--forest);
    font-size: 40px;
}

/* underline Mission heading on scroll credit -> https: //www.youtube.com/watch?v=wsDZm6PXeVw */
.heading__line {
    position: relative;
    display: inline-block;
    margin-bottom: 1rem;
}

/* style underline */
.heading__line::before {
    content: "";
    position: absolute;
    bottom: -5px;
    width: 0;
    height: 4px;
    background: linear-gradient(to right, #194f4990 50%, transparent 50%);
    background-size: 18px 5px;
    transition: 0.7s width;
}

.heading__line--active::before {
    width: 100%;
}

/* Bestseller Section */
.best-sec {
    /* color: #fff; */
}

.best-heading {
    margin-top: 115px;
}

.feature_price {
    font-size: 18px;
}

/* Carousel icon styling */
.carousel-control-prev,
.carousel-control-next {
    border: none;
    background-color: #fff0;
    color: var(--forest);
    width: 5%;
    bottom: 100px;
}

/* Change color of bootstrap svg icons credit -> https: //codepen.io/noahblon/post/coloring-svgs-in-css-background-images */
.carousel-control-prev-icon {
    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23194f49' width='12' height='12' viewBox='0 0 12 12'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e") no-repeat;
    background-size: 30px 30px;
}

.carousel-control-next-icon {
    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23194f49' width='12' height='12' viewBox='0 0 12 12'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e") no-repeat;
    background-size: 30px 30px;
}

.product-ph {
    height: 375px;
    width: 350px;
}

.mission-sec {
    background-color: #0e737365;
    height: auto;
    width: 100vw;
}

.mission-wave {
    width: 100vw;
}

.mission-icon {
    height: 115px;
    width: 115px;
}

.mission-text {
    color: var(--forest);
    font-family: var(--main-font);
    font-size: 26px;
    line-height: 2.5rem;
}

.mission-p {
    font-size: 20px;
    line-height: 2.5rem;
    list-style-type: disc;
    color: var(--forest);
}

/* scroll fade in animation credit -> http: //tinyurl.com/5c6d5nhy */
.reveal {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: 2s all ease;
}

.reveal.active {
    transform: translateY(0);
    opacity: 1;
}

/* styling for icon inset effect */
.icon-container {
    width: 200px;
    height: 200px;
    background: linear-gradient(to bottom, #dcefef 0%, #fff 100%);
    border-radius: 50%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 0 auto;
    box-shadow: inset 1px 3px 16px #194f49;
}

.icon-text {
    font-size: 30px;
    font-family: var(--main-font);
}
/* ... */

